--- a/Code-Webshop/index.html
+++ b/Code-Webshop/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/fotos/LogoRM.png" alt="Logo">
+            <img src="/Code-Webshop/fotos/LogoRM.png" alt="Logo">
         </div>
         <nav>
             <ul>
