--- a/Code-Webshop/index.html
+++ b/Code-Webshop/index.html
@@ -9,11 +9,11 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/Code-Webshop/fotos/LogoRM.png" alt="Logo">
+            <img src="./fotos/LogoRM.png" alt="Logo">
         </div>
         <nav>
             <ul>
-                <li><a href="/Tenues/kleding.php">Tenues</a></li>
+                <li><a href="././Tenues/kleding.php">Tenues</a></li>
                 <li><a href="#">Accessoires</a></li>
                 <li><a href="#">Uitverkoop</a></li>
             </ul>
@@ -23,8 +23,8 @@
         </div>
         <div class="user-actions">
             <a href="#">Inloggen</a>
-            <a href="/Winkelwagen/winkelwagen.php">Winkelwagen</a>
-        </div>
+            <a href="./Winkelwagen/winkelwagen.php">Winkelwagen</a>
+        </div>        
     </header>
 
     <main>
@@ -36,13 +36,13 @@
             </div>
             <div class="featured-items">
                 <div class="item">
-                    <img src="/fotos/Model1.png" alt="Model 1">
+                    <img src="./fotos/Model1.png" alt="Model 1">
                 </div>
                 <div class="item">
-                    <img src="/fotos/Model2.png" alt="Model 2">
+                    <img src="./fotos/Model2.png" alt="Model 2">
                 </div>
                 <div class="item">
-                    <img src="/fotos/Model3.png" alt="Model 3">
+                    <img src="./fotos/Model3.png" alt="Model 3">
                 </div>
             </div>
         </section>
@@ -82,11 +82,11 @@
       
        
         <div class="footer-social">
-            <a href="#"><img src="/fotos/Facebook-Logo.jpg" alt="Facebook"></a>
-            <a href="#"><img src="/fotos/Insta-logo.png" alt="Instagram"></a>
-            <a href="#"><img src="/fotos/twitter-logo.png" alt="Twitter"></a>
-            <a href="#"><img src="/fotos/tiktok-logo.png" alt="TikTok"></a>
-            <a href="#"><img src="/fotos/youtube-logo.png" alt="YouTube"></a>
+            <a href="#"><img src="./fotos/Facebook-Logo.jpg" alt="Facebook"></a>
+            <a href="#"><img src="./fotos/Insta-logo.png" alt="Instagram"></a>
+            <a href="#"><img src="./fotos/twitter-logo.png" alt="Twitter"></a>
+            <a href="#"><img src="./fotos/tiktok-logo.png" alt="TikTok"></a>
+            <a href="#"><img src="./fotos/youtube-logo.png" alt="YouTube"></a>
         </div>
         <div class="footer-bottom">
             <p>&copy; 2024 Real Madrid CF Shop. Alle rechten voorbehouden.</p>
