--- a/Code-Webshop/index.html
+++ b/Code-Webshop/index.html
@@ -13,7 +13,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="././Tenues/kleding.php">Tenues</a></li>
+                <li><a href="./Tenues/kleding.php">Tenues</a></li>
                 <li><a href="#">Accessoires</a></li>
                 <li><a href="#">Uitverkoop</a></li>
             </ul>
@@ -22,10 +22,11 @@
             <input type="text" placeholder="Zoeken...">
         </div>
         <div class="user-actions">
-            <a href="#">Inloggen</a>
+            <a href="./Inlog/inlog.html">Inloggen</a> 
             <a href="./Winkelwagen/winkelwagen.php">Winkelwagen</a>
         </div>        
     </header>
+    
 
     <main>
         <section class="hero">
