Tenue pagina af, kleine aanpassing aan winkelwagen.

--- a/Code-Webshop/index.html
+++ b/Code-Webshop/index.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Madrid Webshop</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./fotos/favicon-real.svg" type="image/x-icon">
+
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="./fotos/LogoRM.png" alt="Logo">
+            <a href="http://localhost/ProefExamen/Code-Webshop/">
+                <img src="./fotos/LogoRM.png" alt="Logo">
+            </a>
         </div>
+        
+
         <nav>
             <ul>
                 <li><a href="././Tenues/kleding.php">Tenues</a></li>
@@ -31,7 +37,7 @@
             <div class="hero-text">
                 <h1>Hala Madrid</h1>
                 <p>Stijlvolle seizoenslooks</p>
-                <a href="#" class="shop-now">Shop nu</a>
+                <a href="././Tenues/kleding.php" class="shop-now">Shop nu</a>
             </div>
             <div class="featured-items">
                 <div class="item">
